--- a/Side Effects Tracker/side_effects_mcp/pyproject.toml
+++ b/Side Effects Tracker/side_effects_mcp/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "medical_data_server"
+name = "side_effects_mcp"
 version = "0.1.0"
 description = "MCP Server created with Arcade.dev"
 requires-python = ">=3.10"
@@ -20,14 +20,14 @@ dev = [
 
 # Tell Arcade.dev that this package has Arcade tools
 [project.entry-points.arcade_toolkits]
-toolkit_name = "medical_data_server"
+toolkit_name = "side_effects_mcp"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/medical_data_server"]
+packages = ["src/side_effects_mcp"]
 
 [tool.ruff]
 line-length = 100
